include/dss_capi.h

    DSS_CAPI_DLL void PVSystems_Set_duty(const char* Value);
    /*! 
    Dispatch shape to use for yearly simulations. Must be previously defined
    as a Loadshape object. If this is not specified, the Daily dispatch shape,
    if any, is repeated during Yearly solution modes. In the default dispatch
    mode, the PVSystem element uses this loadshape to trigger State changes.
    */
    DSS_CAPI_DLL char* PVSystems_Get_yearly(void);
    DSS_CAPI_DLL void PVSystems_Set_yearly(const char* Value);
    /*! 
    Temperature shape to use for daily simulations. Must be previously defined
    as a TShape object of 24 hrs, typically. The PVSystem element uses this
    TShape to determine the Pmpp from the Pmpp vs T curve. Units must agree
    with the Pmpp vs T curve.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Tdaily(void);
    DSS_CAPI_DLL void PVSystems_Set_Tdaily(const char* Value);
    /*! 
    Temperature shape to use for duty cycle dispatch simulations such as for
    solar ramp rate studies. Must be previously defined as a TShape object.
    Typically would have time intervals of 1-5 seconds. Designate the number
    of points to solve using the Set Number=xxxx command. If there are fewer
    points in the actual shape, the shape is assumed to repeat. The PVSystem
    model uses this TShape to determine the Pmpp from the Pmpp vs T curve.
    Units must agree with the Pmpp vs T curve.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Tduty(void);
    DSS_CAPI_DLL void PVSystems_Set_Tduty(const char* Value);
    /*! 
    Temperature shape to use for yearly simulations. Must be previously defined
    as a TShape object. If this is not specified, the Daily dispatch shape, if
    any, is repeated during Yearly solution modes. The PVSystem element uses
    this TShape to determine the Pmpp from the Pmpp vs T curve. Units must
    agree with the Pmpp vs T curve.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Tyearly(void);
    DSS_CAPI_DLL void PVSystems_Set_Tyearly(const char* Value);
    
    /*! 
    Gets/sets the rated max power of the PV array for 1.0 kW/sq-m irradiance and a user-selected array temperature of the active PVSystem.
    */
    DSS_CAPI_DLL double PVSystems_Get_Pmpp(void);
    DSS_CAPI_DLL void PVSystems_Set_Pmpp(double Value);
    /*! 
    Returns the current irradiance value for the active PVSystem. Use it to 
    know what's the current irradiance value for the PV during a simulation.
    */
    DSS_CAPI_DLL double PVSystems_Get_IrradianceNow(void);
    /*! 
    Name of the sensor monitoring this PVSystem element.
    */
    DSS_CAPI_DLL char* PVSystems_Get_Sensor(void);
    DSS_CAPI_DLL void* PVSystems_Get_Pointer(void);