src/CAPI/CAPI_PVSystems.pas


    if elem.DutyShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.DutyShapeObj.Name);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_duty(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.DutyShapeObj := ErrorIfLoadShapeNil(DSSPrime, Value);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_yearly(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.YearlyShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.YearlyShapeObj.Name);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_yearly(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.YearlyShapeObj := ErrorIfLoadShapeNil(DSSPrime, Value);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Tdaily(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.DailyTShapeObj <> NIL then        
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.DailyTShapeObj.Name);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Tdaily(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.DailyTShapeObj := ErrorIfTShapeNil(DSSPrime, Value);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Tduty(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if elem.DutyTShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.DutyTShapeObj.Name);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Tduty(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.DutyTShapeObj := ErrorIfTShapeNil(DSSPrime, Value);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Tyearly(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if elem.YearlyTShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.YearlyTShapeObj.Name);
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Tyearly(const Value: PAnsiChar); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.YearlyTShapeObj := ErrorIfTShapeNil(DSSPrime, Value);
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Pmpp(): Double; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := -1.0;  // not set
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.pmpp;
end;
//------------------------------------------------------------------------------
procedure PVSystems_Set_Pmpp(Value: Double); CDECL;
var
    elem: TPVSystemObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.pmpp := Value;
end;
//------------------------------------------------------------------------------
function PVSystems_Get_IrradianceNow(): Double; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := -1.0;  // not set
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.IrradianceNow;
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Sensor(): PAnsiChar; CDECL;
var
    elem: TPVSystemObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (elem.SensorObj <> NIL) and (elem.SensorObj.MeteredElement <> NIL) then
        Result := DSS_GetAsPAnsiChar(DSSPrime, AnsiLowerCase(elem.SensorObj.MeteredElement.FullName));
end;
//------------------------------------------------------------------------------
function PVSystems_Get_Pointer(): Pointer; CDECL;
begin
    Result := NIL;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.PVSystems.Active
end;
//------------------------------------------------------------------------------
end.
